[package]
name = "fig"
description = "Provides a simple API for declaring custom `cfg` predicates at compile-time"
authors = ["Jaxydog"]
categories = ["development-tools::build-utils", "rust-patterns"]
keywords = ["cfg", "conditional-compilation", "config"]

version = "0.1.0"
rust-version = "1.85"
edition = "2024"
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/Jaxydog/fig"

[features]
default = []

[lints]
clippy.cargo = { level = "warn", priority = -1 }
clippy.pedantic = { level = "warn", priority = -1 }
clippy.nursery = { level = "warn", priority = -1 }

clippy.allow_attributes = "warn"
clippy.allow_attributes_without_reason = "deny"
clippy.missing_docs_in_private_items = "warn"
clippy.module_name_repetitions = "allow"
clippy.todo = "warn"
clippy.undocumented_unsafe_blocks = "deny"
clippy.unwrap_used = "deny"
rust.missing_docs = "warn"
rust.unsafe_code = "deny"

[dependencies]
unicode-ident = "~1.0"
